# WinShortcuts

./: Cargo.toml
src/: main.rs  shortcuts.rs
