[package]
name = "WinShortcuts"
version = "0.1.0"
authors = ["chudongyu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"
[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "shellapi"] }
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[build-dependencies]
winapi-build = "0.1.1"

[package.metadata.docs.rs]
# This also sets the default target to `x86_64-pc-windows-msvc`
features = [ "all" ]
all-features = false
targets = ["x86_64-pc-windows-msvc"]